--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
       color: #333;
     }
     img {
-      width: 200px;
+      width: 300px;
       height: auto;
       margin-bottom: 30px;
     }
     h1 {
-      font-size: 28px;
+      font-size: 30px;
       margin-bottom: 10px;
     }
     p {
@@ -33,9 +33,11 @@
 </head>
 <body>
   <img src="LOGO.jpg" alt="Велпром 2000 лого">
-  <h1>Веб страницата е во изработка</h1>
+  <h1>ВЕБ СТРАНАТА Е ВО ИЗРАБОТКА</h1>
+  <h2>ВИ БЛАГОДАРИМЕ НА РАЗБИРАЊЕТО</h2>
   <p>Контакт телефон: <strong>075 507 779</strong></p>
 </body>
 </html>
+
 
 
