--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
       font-size: 30px;
       margin-bottom: 10px;
     }
+    h2  {
+      font-size:30px;
+      margin-bottom: 10px;
+    }
     p {
       font-size: 18px;
       margin: 5px 0;
@@ -35,9 +39,10 @@
   <img src="LOGO.jpg" alt="Велпром 2000 лого">
   <h1>ВЕБ СТРАНАТА Е ВО ИЗРАБОТКА</h1>
   <h2>ВИ БЛАГОДАРИМЕ НА РАЗБИРАЊЕТО</h2>
-  <p>Контакт телефон: <strong>075 507 779</strong></p>
+  <p>КОНТАКТ ТЕЛЕФОН: <a href= “075507779” </p>
 </body>
 </html>
+
 
 
 
