--- a/index.html
+++ b/index.html
@@ -39,9 +39,10 @@
   <img src="LOGO.jpg" alt="Велпром 2000 лого">
   <h1>ВЕБ СТРАНАТА Е ВО ИЗРАБОТКА</h1>
   <h2>ВИ БЛАГОДАРИМЕ НА РАЗБИРАЊЕТО</h2>
-  <p>КОНТАКТ ТЕЛЕФОН: <a href= “075507779” </p>
+  <p>КОНТАКТ ТЕЛЕФОН: <a href= “075507779" </a> </p>
 </body>
 </html>
+
 
 
 
