--- a/index.html
+++ b/index.html
@@ -36,12 +36,13 @@
   </style>
 </head>
 <body>
-  <img src="LOGO.jpg" alt="Велпром 2000 лого">
+  <img src="" alt="ВЕЕЛ ПРОМ 2000 лого">
   <h1>ВЕБ СТРАНАТА Е ВО ИЗРАБОТКА</h1>
   <h2>ВИ БЛАГОДАРИМЕ НА РАЗБИРАЊЕТО</h2>
   <p>КОНТАКТ ТЕЛЕФОН: <a href= “075507779" </a> </p>
 </body>
 </html>
+
 
 
 
