--- a/index.html
+++ b/index.html
@@ -39,9 +39,10 @@
   <img src="293557606_102861735844737_4968424724679852756_n.jpg" alt="ВЕЕЛ ПРОМ 2000 лого">
   <h1>ВЕБ СТРАНАТА Е ВО ИЗРАБОТКА</h1>
   <h2>ВИ БЛАГОДАРИМЕ НА РАЗБИРАЊЕТО</h2>
-  <p>КОНТАКТ ТЕЛЕФОН: <a href= “075507779"> 075507779 </a> </p>
+  <p>КОНТАКТ ТЕЛЕФОН: <a href= “075507779"> +38975507779 </a> </p>
 </body>
 </html>
+
 
 
 
