--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Велпром 2000 - Во изработка</title>
+  <title>ВЕЕЛ ПРОМ 2000</title>
   <style>
     body {
       background-color: #ffffff;
@@ -42,6 +42,7 @@
   <p>КОНТАКТ ТЕЛЕФОН: <a href= “075507779"> +38975507779 </a> </p>
 </body>
 </html>
+
 
 
 
