--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
       margin-bottom: 10px;
     }
     p {
-      font-size: 18px;
-      margin: 5px 0;
+      font-size:30px;
+      margin-bottom: 10px;
     }
   </style>
 </head>
@@ -42,6 +42,7 @@
   <p>КОНТАКТ ТЕЛЕФОН: <a href= "tel:075507779"> +38975507779 </a> </p>
 </body>
 </html>
+
 
 
 
